function(Login & password)

--- a/pages/index.html
+++ b/pages/index.html
@@ -27,6 +27,8 @@
         </div>
 
         <button type="submit">Connexion</button>
+
+        <a href="./signup.html">S'inscrire ?</a>
     </form>
 
 
