--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inscription</title>
 
     <link rel="stylesheet" href="../css/base.css">
     <link 
@@ -14,7 +14,26 @@
 </head>
 <body>
     
+    <form class="col-6 bg-white p-4">
+        <h1>Inscription</h1>
 
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="loginInput" placeholder="name@example.com">
+            <label for="loginInput">Username</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+            <label for="passwordInput">Password</label>
+        </div>
+        <div class="form-floating">
+            <input type="password" class="form-control" id="checkPasswordInput" placeholder="Password">
+            <label for="checkPasswordInput">Password</label>
+        </div>
+
+        <button onclick="checkPassword()">Inscription</button>
+    </form>
+
+    <script src="../js/api.service.js"></script>
     <script 
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" 
