--- a/pages/index.html
+++ b/pages/index.html
@@ -14,11 +14,11 @@
 
 <body>
 
-    <form class="col-6 bg-white p-4" action="">
+    <div class="col-6 bg-white p-4">
         <h1>Connexion</h1>
 
         <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="loginInput" placeholder="name@example.com">
+            <input type="text" class="form-control" id="loginInput" placeholder="name@example.com">
             <label for="loginInput">Username</label>
         </div>
         <div class="form-floating">
@@ -26,10 +26,10 @@
             <label for="passwordInput">Password</label>
         </div>
 
-        <button type="submit">Connexion</button>
+        <button onclick="Login()">Connexion</button>
 
         <a href="./signup.html">S'inscrire ?</a>
-    </form>
+    </div>
 
 
     <script src="../js/api.service.js"></script>
