fix(various bugs)

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -18,15 +18,15 @@
         <h1>Inscription</h1>
 
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="loginInput">
+            <input type="text" class="form-control" id="loginInput" placeholder="Input">
             <label for="loginInput">Username</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="passwordInput">
+            <input type="password" class="form-control" id="passwordInput" placeholder="Password">
             <label for="passwordInput">Password</label>
         </div>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="checkPasswordInput">
+        <div class="form-floating mb-3">
+            <input type="password" class="form-control" id="checkPasswordInput" placeholder="Password Check">
             <label for="checkPasswordInput">Password</label>
         </div>
 
