--- a/pages/index.html
+++ b/pages/index.html
@@ -15,13 +15,13 @@
 <body>
 
     <div class="col-6 bg-white p-4">
-        <h1>Connexion</h1>
+        <h1 class="text-center mb-4">Connexion</h1>
 
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="loginInput" placeholder="name@example.com">
             <label for="loginInput">Username</label>
         </div>
-        <div class="form-floating">
+        <div class="form-floating mb-3">
             <input type="password" class="form-control" id="passwordInput" placeholder="Password">
             <label for="passwordInput">Password</label>
         </div>
