--- a/pages/list.html
+++ b/pages/list.html
@@ -25,7 +25,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" onclick="bugsList()">Liste</a>
+                            <a class="nav-link active" onclick="bugsList(0)">Liste Complète</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" onclick="bugsList(450)">Ma Liste</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">A traiter</a>
@@ -42,7 +45,7 @@
         </nav>
     </header>
 
-    <div class="col-10 my-5 mx-auto bg-white p-4">
+    <div class="col-10 my-5 mx-auto bg-white p-4 table-responsive">
         <table id="bugList" class="table table-striped">
             <thead>
                 <tr>
@@ -53,34 +56,7 @@
                 </tr>
             </thead>
             <tbody id="bugListBody">
-                <tr>
-                    <td>Bug</td>
-                    <td>Jean</td>
-                    <td>
-                        <select name="bug1" id="bug1">
-                            <option value="">State 0</option>
-                            <option value="">State 1</option>
-                            <option value="">State 2</option>
-                        </select>
-                    </td>
-                    <td>
-                        <button>Supprimer</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Bug</td>
-                    <td>Michel</td>
-                    <td>
-                        <select name="bug2" id="bug2">
-                            <option value="">State 0</option>
-                            <option value="">State 1</option>
-                            <option value="">State 2</option>
-                        </select>
-                    </td>
-                    <td>
-                        <button>Supprimer</button>
-                    </td>
-                </tr>
+                
             </tbody>
         </table>
     </div>
@@ -94,28 +70,31 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form action="" method="post">
+                    <form action="addBug()" method="post">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="bugTitle" placeholder="Titre">
-                            <label for="bugTitle">Titre</label>
+                            <input type="text" class="form-control" id="bugAddTitle" placeholder="Titre">
+                            <label for="bugAddTitle">Titre</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <textarea class="form-control" placeholder="description" id="bugDesc" style="height: 100px"></textarea>
-                            <label for="bugDesc">Description</label>
+                            <textarea class="form-control" placeholder="description" id="bugAddDesc" style="height: 100px"></textarea>
+                            <label for="bugAddDesc">Description</label>
                           </div>
 
                         <button type="submit">Ajouter un bug</button>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="addBug()">Ajouter à la liste</button>
                 </div>
             </div>
         </div>
     </div>
 
     <script src="../js/api.service.js"></script>
+    <script>
+        bugsList(0);
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
