--- a/pages/list.html
+++ b/pages/list.html
@@ -8,6 +8,7 @@
     <title>BugList</title>
 
     <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
@@ -17,7 +18,10 @@
         <!-- As a heading -->
         <nav class="navbar navbar-expand-lg bg-light py-4">
             <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1">BugTracker</span>
+                <div class="d-flex flex-column col-1">
+                    <img class="" src="https://assets.webiconspng.com/uploads/2016/12/Bug-Transparent-Icon.png" alt="bugImg">
+                    <span class="navbar-brand mb-0 h1">BugTracker</span>
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,21 +29,23 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" onclick="bugsList(0)">Actualiser</a>
+                            <button class="btn btn-link" onclick="bugsList(0)">Actualiser</button>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" onclick="bugsList(450)">Ma Liste</a>
+                            <button class="btn btn-link" onclick="bugsList(450)">Ma Liste</button>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" onclick="bugsList(0, true)">A traiter</a>
+                            <button class="btn btn-link" onclick="bugsList(0, true)">A traiter</button>
                         </li>
+                    </ul>
+                    <ul class="navbar-nav mt-lg-0 mt-5 ms-auto">
                         <li class="nav-item">
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#addBug">
                                 Ajouter
                             </button>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item mt-lg-0 mt-3 ms-lg-3">
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#Logout">
                                 Deconnexion
@@ -51,14 +57,14 @@
         </nav>
     </header>
 
-    <div class="col-10 my-5 mx-auto bg-white p-4 table-responsive">
+    <div class="col-lg-10 col-12 my-5 mx-auto bg-white p-4 table-responsive shadow">
         <table id="bugList" class="table table-striped">
             <thead>
                 <tr>
-                    <th class="col-4">Titre</th>
-                    <th class="col-4">Développeur</th>
+                    <th class="col-5">Titre</th>
+                    <th class="col-3">Développeur</th>
                     <th class="col-2">État</th>
-                    <th class="col-2"></th>
+                    <th class="col-1"></th>
                 </tr>
             </thead>
             <tbody id="bugListBody">
