--- a/pages/list.html
+++ b/pages/list.html
@@ -17,9 +17,9 @@
     <header>
         <!-- As a heading -->
         <nav class="navbar navbar-expand-lg bg-light py-4">
-            <div class="container-fluid">
-                <div class="d-flex flex-column col-1">
-                    <img class="" src="https://assets.webiconspng.com/uploads/2016/12/Bug-Transparent-Icon.png" alt="bugImg">
+            <div class="container-fluid align-middle">
+                <div class="d-flex col-2">
+                    <img height="30px" class="me-2" src="https://assets.webiconspng.com/uploads/2016/12/Bug-Transparent-Icon.png" alt="bugImg">
                     <span class="navbar-brand mb-0 h1">BugTracker</span>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
